configs/dhcpd/br-r/ip6tables
# Generated by ip6tables-save v1.8.9 (nf_tables) on Thu May 23 01:11:07 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p udp -m udp --dport 2222 -j ACCEPT
-A INPUT -p udp -m udp --dport 45678 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A FORWARD -p udp -m udp --dport 2222 -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
COMMIT
# Completed on Thu May 23 01:11:07 2024
