configs/dhcpd/br-r/iptables
# Generated by iptables-save v1.8.9 (nf_tables) on Thu May 23 01:11:00 2024
*filter
:INPUT DROP [2006:150348]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1264:120676]
-A INPUT -p udp -m udp --dport 45678 -j ACCEPT
-A INPUT -p udp -m udp --dport 2222 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -p udp -m udp --dport 45678 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 2222 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
COMMIT
# Completed on Thu May 23 01:11:00 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Thu May 23 01:11:00 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:76]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o ens33 -j MASQUERADE
COMMIT
# Completed on Thu May 23 01:11:00 2024
